--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "0.0.1",
   "main": "tslint.json",
   "scripts": {
-    "test": "node_modules/.bin/tslint -c tslint.json tslint.json"
+    "test": "node_modules/.bin/tslint -p tsconfig.json -c tslint.json tslint.json"
   },
   "prettier": {
     "trailingComma": "es5"
@@ -26,6 +26,7 @@
     "tslint.json"
   ],
   "devDependencies": {
+    "@cablanchard/tsconfig": "0.0.1",
     "prettier": "~1.16.3",
     "tslint": "~5.14.0",
     "typescript": "~3.3.3"
