--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "author": {
     "name": "Christopher Blanchard",
-    "email": "cablanchard@gmail.com",
-    "url": "chrxv.com"
+    "email": "git@nf3.co",
+    "url": "nf3.co"
   },
   "license": "MIT",
   "files": [
